# mcp-assistant

./: api.py  app.py  browser_mcp.json  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  server.js
.playwright-mcp/: page-2026-05-05T06-32-49-697Z.yml  page-2026-05-07T21-37-01-630Z.yml  page-2026-05-07T21-37-21-563Z.yml  page-2026-05-07T21-42-09-810Z.yml
mcp-assistant/: pyproject.toml
public/: index.html
