[project]
name = "mcp-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.74.0",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.4",
    "mcp-use>=1.7.0",
]